--- a/index.html
+++ b/index.html
@@ -7,38 +7,67 @@
     <title>Start - Monster Jam</title>
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://db.onlinewebfonts.com/c/69dbc1186412d7831b88d8a78a360360?family=DIN+Condensed+Web"
+        rel="stylesheet">
+    <link href="https://db.onlinewebfonts.com/c/84693c6ac1f359fe8a4ac49b69f492dd?family=Gotham+Light" rel="stylesheet">
+    <script defer src="js/main.js"></script>
 </head>
 
 <body>
     <header>
-        <a href="index.html"><img src="images/monster truck logo.png" alt="logo"></a>
-        <nav>
+        <a href="index.html"><img src="images/monster truck logo.png" alt="logo" id="logo"></a>
+        <!-- Menyknapp för att öppna mobilmenyn-->
+        <button class="menu-btn open" id="open-menu">
+            <span class="menu-icon">
+                <span class="bars"></span>
+                <span class="bars"></span>
+                <span class="bars"></span>
+            </span>
+            <span class="menu-text">Meny</span>
+        </button>
+        <!-- navigering -->
+        <nav id="nav-menu">
+            <!-- Knapp som visas om mobilmenyn är utfälld-->
+            <button class="menu-btn close" id="close-menu">
+                <span class="menu-icon">
+                    <span class="bars cross1"></span>
+                    <span class="bars cross2"></span>
+                </span>
+                <span class="menu-text">Stäng meny</span>
+            </button>
             <ul>
                 <li><a href="index.html">START</a></li>
                 <li><a href="shop.html">SHOP</a></li>
                 <li><a href="about.html">OM OSS</a></li>
             </ul>
+        </nav>
     </header>
     <main>
         <div class="banner"></div>
         <section>
             <h1>Senaste Produkterna</h1>
-            <picture>
-                <!--     <source srcset="images/calavera.webp" type="image/webp"> -->
-                <img src="images/calavera.jpg" alt="Calavera Monster Truck Toy">
-            </picture>
-            <picture>
-                <!--<source srcset="images/toroloco.webp" type="image/webp">-->
-                <img src="images/toroloco.jpg" alt="Toro Loco Monster Truck Toy">
-            </picture>
-            <picture>
-                <!--<source srcset="images/gravedigger.webp" type="image/webp">-->
-                <img src="images/gravedigger.jpg" alt="Grave Digger Monster Truck Toy">
-            </picture>
-        </section> 
+            <a href="products/calavera.html">
+                <picture>
+                    <!--     <source srcset="images/calavera.webp" type="image/webp"> -->
+                    <img src="images/calavera.jpg" alt="Calavera Monster Truck Toy">
+                </picture>
+            </a>
+            <a href="products/toroloco.html">
+                <picture>
+                    <!--<source srcset="images/toroloco.webp" type="image/webp">-->
+                    <img src="images/toroloco.jpg" alt="Toro Loco Monster Truck Toy">
+                </picture>
+            </a>
+            <a href="products/gravedigger.html">
+                <picture>
+                    <!--<source srcset="images/gravedigger.webp" type="image/webp">-->
+                    <img src="images/gravedigger.jpg" alt="Grave Digger Monster Truck Toy">
+                </picture>
+            </a>
+        </section>
     </main>
     <footer>
-        <p>Copyrigth &copy; 2024 Jonas Ståleker</p>
+        <p>Copyright &copy; 2024 Jonas Ståleker</p>
     </footer>
 
 </body>
