add loads of things

--- a/index.html
+++ b/index.html
@@ -43,24 +43,29 @@
         </nav>
     </header>
     <main>
-        <div class="banner"></div>
+        <div>
+            <picture>
+                <source srcset="images/banner.webp" type="image/webp">
+                <img src="images/banner.png" alt="banner" id="banner">
+            </picture>
+        </div>
         <section>
             <h1>Senaste Produkterna</h1>
             <a href="products/calavera.html">
                 <picture>
-                    <!--     <source srcset="images/calavera.webp" type="image/webp"> -->
+                    <source srcset="images/calavera.webp" type="image/webp">
                     <img src="images/calavera.jpg" alt="Calavera Monster Truck Toy">
                 </picture>
             </a>
             <a href="products/toroloco.html">
                 <picture>
-                    <!--<source srcset="images/toroloco.webp" type="image/webp">-->
+                    <source srcset="images/toroloco.webp" type="image/webp">
                     <img src="images/toroloco.jpg" alt="Toro Loco Monster Truck Toy">
                 </picture>
             </a>
             <a href="products/gravedigger.html">
                 <picture>
-                    <!--<source srcset="images/gravedigger.webp" type="image/webp">-->
+                    <source srcset="images/gravedigger.webp" type="image/webp">
                     <img src="images/gravedigger.jpg" alt="Grave Digger Monster Truck Toy">
                 </picture>
             </a>
