solve media query problems

--- a/products/calavera.html
+++ b/products/calavera.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calavera Monster Truck Toy - Monster Jam</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico">
     <link rel="stylesheet" href="../css/styles.css">
     <link href="https://db.onlinewebfonts.com/c/69dbc1186412d7831b88d8a78a360360?family=DIN+Condensed+Web"
         rel="stylesheet">
@@ -47,7 +47,7 @@
             <div class="grid-item1">
                 <picture>
                     <source srcset="../images/calavera.webp" type="image/webp">
-                    <img src="../images/calavera.jpg" alt="Calavera Monster Truck Toy">
+                    <img src="../images/calavera.jpg" alt="Calavera Monster Truck Toy" class="product-page-img">
                 </picture>
             </div>
             <div class="grid-item2">
