--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="index.html"><img src="images/monster truck logo.png" alt="logo" id="logo"></a>
+        <a href="index.html"><img src="images/logo.png" alt="logo" id="logo"></a>
         <!-- Menyknapp för att öppna mobilmenyn-->
         <button class="menu-btn open" id="open-menu">
             <span class="menu-icon">
