--- a/products/sunnova.html
+++ b/products/sunnova.html
@@ -56,16 +56,16 @@
                 <div class="buy-btn">KÖP</div>
                 <h2>Produktinfo</h2>
                 <p>Vi presenterar den helt nya officiella formgjutna Monster Jam-monstertrucken
-                    i skala 1:64! Denna slimmade, grymma Monster Jam-maskin har fler detaljer 
-                    och mer grafik än någonsin tidigare! Med officiella BKT-däck, designade 
-                    fälgar i krom och ett autentiskt chassi med kromdetaljer förverkligar den här 
-                    monstertrucken både stilen och känslan hos den verkliga motsvarigheten! 
-                    DESSUTOM kommer den här trucken i skala 1:64 komplett med en förare 
+                    i skala 1:64! Denna slimmade, grymma Monster Jam-maskin har fler detaljer
+                    och mer grafik än någonsin tidigare! Med officiella BKT-däck, designade
+                    fälgar i krom och ett autentiskt chassi med kromdetaljer förverkligar den här
+                    monstertrucken både stilen och känslan hos den verkliga motsvarigheten!
+                    DESSUTOM kommer den här trucken i skala 1:64 komplett med en förare
                     fastgjuten i förarsätet och en Monster Jam-samlarfigur så att du kan skapa en
-                    scen för din egen Monster Jam-arena! Den här formgjutna 
-                    Monster Jam-trucken i skala 1:64 är precis som den äkta varan - bara i en 
-                    rolig storlek! Och nu med fler truckar att samla på än någonsin förr är det 
-                    enkelt att hålla koll på din samling med en exklusiv samlaraffisch! 
+                    scen för din egen Monster Jam-arena! Den här formgjutna
+                    Monster Jam-trucken i skala 1:64 är precis som den äkta varan - bara i en
+                    rolig storlek! Och nu med fler truckar att samla på än någonsin förr är det
+                    enkelt att hålla koll på din samling med en exklusiv samlaraffisch!
                     Börja bygga din Monster Jam-samling idag!
                     <br><br>
                     Varumärke: Monster Jam
@@ -77,9 +77,14 @@
                     Färg: Flerfärgad<br>
                     Skala: 1:64<br>
                     Material: Metall<br>
-                    Rekommenderad ålder: +3 år</p>
+                    Rekommenderad ålder: +3 år
+                </p>
             </div>
         </div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/sYXl5hi9AqI?si=dgsCVHKJFFmhnicm"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
     </main>
     <footer>
         <p>Copyright &copy; 2024 Jonas Ståleker</p>
