--- a/products/sunnova.html
+++ b/products/sunnova.html
@@ -10,7 +10,10 @@
     <link href="https://db.onlinewebfonts.com/c/69dbc1186412d7831b88d8a78a360360?family=DIN+Condensed+Web"
         rel="stylesheet">
     <link href="https://db.onlinewebfonts.com/c/84693c6ac1f359fe8a4ac49b69f492dd?family=Gotham+Light" rel="stylesheet">
-    <script defer src="../js/main.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css">
+    <script src="../js/main.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox-plus-jquery.min.map"
+        defer></script>
 </head>
 
 <body>
@@ -45,10 +48,11 @@
     <main>
         <div class="grid-container">
             <div class="grid-item1">
-                <picture>
-                    <source srcset="../images/sunnova.webp" type="image/webp">
-                    <img src="../images/sunnova.jpg" alt="Son-uva Digger Monster Truck Toy" class="product-page-img">
-                </picture>
+                <a href="../images/sunnova_big.jpg" target="_blank" data-lightbox="monstertruck"><img
+                        src="../images/sunnova.jpg" alt="Son-uva Digger Monster Truck Toy" class="product-page-img"></a>
+                <a href="../images/sunnova2_big.jpg" target="_blank" data-lightbox="monstertruck"><img
+                        src="../images/sunnova2.jpg" alt="Son-uva Digger Monster Truck Toy"
+                        class="product-page-img"></a>
             </div>
             <div class="grid-item2">
                 <h1>MONSTER TRUCK - SON-UVA DIGGER</h1>
