--- a/products/sunnova.html
+++ b/products/sunnova.html
@@ -12,7 +12,7 @@
     <link href="https://db.onlinewebfonts.com/c/84693c6ac1f359fe8a4ac49b69f492dd?family=Gotham+Light" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css">
     <script src="../js/main.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox-plus-jquery.min.map"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox-plus-jquery.min.js"
         defer></script>
 </head>
 
@@ -52,7 +52,7 @@
                         src="../images/sunnova.jpg" alt="Son-uva Digger Monster Truck Toy" class="product-page-img"></a>
                 <a href="../images/sunnova2_big.jpg" target="_blank" data-lightbox="monstertruck"><img
                         src="../images/sunnova2.jpg" alt="Son-uva Digger Monster Truck Toy"
-                        class="product-page-img"></a>
+                        class="product-page-img" id="hidden"></a>
             </div>
             <div class="grid-item2">
                 <h1>MONSTER TRUCK - SON-UVA DIGGER</h1>
