--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link href="https://db.onlinewebfonts.com/c/84693c6ac1f359fe8a4ac49b69f492dd?family=Gotham+Light" rel="stylesheet">
     <script defer src="js/main.js"></script>
+    <script defer src="js/webshop.js"></script>
 </head>
 
 <body>
@@ -39,6 +40,7 @@
                 <li><a href="index.html">START</a></li>
                 <li><a href="shop.html">SHOP</a></li>
                 <li><a href="about.html">OM OSS</a></li>
+                <li><a href="basket.html">KASSA</a></li>
             </ul>
         </nav>
     </header>
