--- a/products/toroloco.html
+++ b/products/toroloco.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link href="https://db.onlinewebfonts.com/c/84693c6ac1f359fe8a4ac49b69f492dd?family=Gotham+Light" rel="stylesheet">
     <script defer src="../js/main.js"></script>
+    <script defer src="../js/webshop.js"></script>
 </head>
 
 <body>
@@ -39,6 +40,7 @@
                 <li><a href="../index.html">START</a></li>
                 <li><a href="../shop.html">SHOP</a></li>
                 <li><a href="../about.html">OM OSS</a></li>
+                <li><a href="../basket.html">KASSA</a></li>
             </ul>
         </nav>
     </header>
@@ -53,19 +55,20 @@
             <div class="grid-item2">
                 <h1>MONSTER TRUCK - TORO LOCO</h1>
                 <h1>150 kr</h1>
-                <div class="buy-btn">KÖP</div>
+                <button class="buybtn"
+                    onclick="addToBasket(this, '005', 'Toro Loco', 150, '../images/toroloco.jpg', true)">KÖP</button>
                 <h2>Produktinfo</h2>
                 <p>Vi presenterar den helt nya officiella formgjutna Monster Jam-monstertrucken
-                    i skala 1:64! Denna slimmade, grymma Monster Jam-maskin har fler detaljer 
-                    och mer grafik än någonsin tidigare! Med officiella BKT-däck, designade 
-                    fälgar i krom och ett autentiskt chassi med kromdetaljer förverkligar den här 
-                    monstertrucken både stilen och känslan hos den verkliga motsvarigheten! 
-                    DESSUTOM kommer den här trucken i skala 1:64 komplett med en förare 
+                    i skala 1:64! Denna slimmade, grymma Monster Jam-maskin har fler detaljer
+                    och mer grafik än någonsin tidigare! Med officiella BKT-däck, designade
+                    fälgar i krom och ett autentiskt chassi med kromdetaljer förverkligar den här
+                    monstertrucken både stilen och känslan hos den verkliga motsvarigheten!
+                    DESSUTOM kommer den här trucken i skala 1:64 komplett med en förare
                     fastgjuten i förarsätet och en Monster Jam-samlarfigur så att du kan skapa en
-                    scen för din egen Monster Jam-arena! Den här formgjutna 
-                    Monster Jam-trucken i skala 1:64 är precis som den äkta varan - bara i en 
-                    rolig storlek! Och nu med fler truckar att samla på än någonsin förr är det 
-                    enkelt att hålla koll på din samling med en exklusiv samlaraffisch! 
+                    scen för din egen Monster Jam-arena! Den här formgjutna
+                    Monster Jam-trucken i skala 1:64 är precis som den äkta varan - bara i en
+                    rolig storlek! Och nu med fler truckar att samla på än någonsin förr är det
+                    enkelt att hålla koll på din samling med en exklusiv samlaraffisch!
                     Börja bygga din Monster Jam-samling idag!
                     <br><br>
                     Varumärke: Monster Jam
@@ -77,7 +80,8 @@
                     Färg: Flerfärgad<br>
                     Skala: 1:64<br>
                     Material: Metall<br>
-                    Rekommenderad ålder: +3 år</p>
+                    Rekommenderad ålder: +3 år
+                </p>
             </div>
         </div>
     </main>
