--- a/products/calavera.html
+++ b/products/calavera.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
     <link href="https://db.onlinewebfonts.com/c/84693c6ac1f359fe8a4ac49b69f492dd?family=Gotham+Light" rel="stylesheet">
     <script defer src="../js/main.js"></script>
+    <script defer src="../js/webshop.js"></script>
 </head>
 
 <body>
@@ -39,6 +40,7 @@
                 <li><a href="../index.html">START</a></li>
                 <li><a href="../shop.html">SHOP</a></li>
                 <li><a href="../about.html">OM OSS</a></li>
+                <li><a href="../basket.html">KASSA</a></li>
             </ul>
         </nav>
     </header>
@@ -53,7 +55,7 @@
             <div class="grid-item2">
                 <h1>MONSTER TRUCK - CALAVERA</h1>
                 <h1>150 kr</h1>
-                <div class="buy-btn">KÖP</div>
+                <button class="buybtn" onclick="addToBasket(this, '001', 'Calavera', 150, '../images/calavera.jpg', true)">KÖP</button>
                 <h2>Produktinfo</h2>
                 <p>Vi presenterar den helt nya officiella formgjutna Monster Jam-monstertrucken
                     i skala 1:64! Denna slimmade, grymma Monster Jam-maskin har fler detaljer 
