add current page indicator

--- a/shop.html
+++ b/shop.html
@@ -38,7 +38,7 @@
             </button>
             <ul>
                 <li><a href="index.html">START</a></li>
-                <li><a href="shop.html">SHOP</a></li>
+                <li><a href="shop.html" class="current">SHOP</a></li>
                 <li><a href="about.html">OM OSS</a></li>
                 <li><a href="basket.html">KASSA</a></li>
             </ul>
