--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             <ul>
                 <li><a href="index.html">START</a></li>
                 <li><a href="shop.html">SHOP</a></li>
-                <li><a href="about.html">OM OSS</a></li>
+                <li><a href="about.html" class="current">OM OSS</a></li>
                 <li><a href="basket.html">KASSA</a></li>
             </ul>
         </nav>
