--- a/basket.html
+++ b/basket.html
@@ -40,7 +40,7 @@
                 <li><a href="index.html">START</a></li>
                 <li><a href="shop.html">SHOP</a></li>
                 <li><a href="about.html">OM OSS</a></li>
-                <li><a href="basket.html">KASSA</a></li>
+                <li><a href="basket.html" class="current">KASSA</a></li>
             </ul>
         </nav>
     </header>
