--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <span class="menu-text">Stäng meny</span>
             </button>
             <ul>
-                <li><a href="index.html">START</a></li>
+                <li><a href="index.html" class="current">START</a></li>
                 <li><a href="shop.html">SHOP</a></li>
                 <li><a href="about.html">OM OSS</a></li>
                 <li><a href="basket.html">KASSA</a></li>
