add notify on basket add

--- a/products/earthshaker.html
+++ b/products/earthshaker.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div id="notify"></div>
     <header>
         <a href="../index.html"><img src="../images/logo.png" alt="logo" id="logo"></a>
         <!-- Menyknapp för att öppna mobilmenyn-->
@@ -55,19 +56,20 @@
             <div class="grid-item2">
                 <h1>MONSTER TRUCK - EARTHSHAKER</h1>
                 <h1>150 kr</h1>
-                <button class="buybtn" onclick="addToBasket(this, '002', 'Earthshaker', 150, '../images/earthshaker.jpg', true)">KÖP</button>
+                <button class="buybtn"
+                    onclick="addToBasket(this, '002', 'Earthshaker', 150, '../images/earthshaker.jpg', true)">KÖP</button>
                 <h2>Produktinfo</h2>
                 <p>Vi presenterar den helt nya officiella formgjutna Monster Jam-monstertrucken
-                    i skala 1:64! Denna slimmade, grymma Monster Jam-maskin har fler detaljer 
-                    och mer grafik än någonsin tidigare! Med officiella BKT-däck, designade 
-                    fälgar i krom och ett autentiskt chassi med kromdetaljer förverkligar den här 
-                    monstertrucken både stilen och känslan hos den verkliga motsvarigheten! 
-                    DESSUTOM kommer den här trucken i skala 1:64 komplett med en förare 
+                    i skala 1:64! Denna slimmade, grymma Monster Jam-maskin har fler detaljer
+                    och mer grafik än någonsin tidigare! Med officiella BKT-däck, designade
+                    fälgar i krom och ett autentiskt chassi med kromdetaljer förverkligar den här
+                    monstertrucken både stilen och känslan hos den verkliga motsvarigheten!
+                    DESSUTOM kommer den här trucken i skala 1:64 komplett med en förare
                     fastgjuten i förarsätet och en Monster Jam-samlarfigur så att du kan skapa en
-                    scen för din egen Monster Jam-arena! Den här formgjutna 
-                    Monster Jam-trucken i skala 1:64 är precis som den äkta varan - bara i en 
-                    rolig storlek! Och nu med fler truckar att samla på än någonsin förr är det 
-                    enkelt att hålla koll på din samling med en exklusiv samlaraffisch! 
+                    scen för din egen Monster Jam-arena! Den här formgjutna
+                    Monster Jam-trucken i skala 1:64 är precis som den äkta varan - bara i en
+                    rolig storlek! Och nu med fler truckar att samla på än någonsin förr är det
+                    enkelt att hålla koll på din samling med en exklusiv samlaraffisch!
                     Börja bygga din Monster Jam-samling idag!
                     <br><br>
                     Varumärke: Monster Jam
@@ -79,7 +81,8 @@
                     Färg: Flerfärgad<br>
                     Skala: 1:64<br>
                     Material: Metall<br>
-                    Rekommenderad ålder: +3 år</p>
+                    Rekommenderad ålder: +3 år
+                </p>
             </div>
         </div>
     </main>
