--- a/products/sunnova.html
+++ b/products/sunnova.html
@@ -12,12 +12,12 @@
     <link href="https://db.onlinewebfonts.com/c/84693c6ac1f359fe8a4ac49b69f492dd?family=Gotham+Light" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css">
     <script src="../js/main.js" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox-plus-jquery.min.js"
-        defer></script>
-        <script defer src="../js/webshop.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/js/lightbox-plus-jquery.min.js" defer></script>
+    <script defer src="../js/webshop.js"></script>
 </head>
 
 <body>
+    <div id="notify"></div>
     <header>
         <a href="../index.html"><img src="../images/logo.png" alt="logo" id="logo"></a>
         <!-- Menyknapp för att öppna mobilmenyn-->
@@ -53,13 +53,14 @@
                 <a href="../images/sunnova_big.jpg" target="_blank" data-lightbox="monstertruck"><img
                         src="../images/sunnova.jpg" alt="Son-uva Digger Monster Truck Toy" class="product-page-img"></a>
                 <a href="../images/sunnova2_big.jpg" target="_blank" data-lightbox="monstertruck"><img
-                        src="../images/sunnova2.jpg" alt="Son-uva Digger Monster Truck Toy"
-                        class="product-page-img" id="hidden"></a>
+                        src="../images/sunnova2.jpg" alt="Son-uva Digger Monster Truck Toy" class="product-page-img"
+                        id="hidden"></a>
             </div>
             <div class="grid-item2">
                 <h1>MONSTER TRUCK - SON-UVA DIGGER</h1>
                 <h1>150 kr</h1>
-                <button class="buybtn" onclick="addToBasket(this, '004', 'Son-uva Digger', 150, '../images/sunnova.jpg', true)">KÖP</button>
+                <button class="buybtn"
+                    onclick="addToBasket(this, '004', 'Son-uva Digger', 150, '../images/sunnova.jpg', true)">KÖP</button>
                 <h2>Produktinfo</h2>
                 <p>Vi presenterar den helt nya officiella formgjutna Monster Jam-monstertrucken
                     i skala 1:64! Denna slimmade, grymma Monster Jam-maskin har fler detaljer
