--- a/products/toroloco.html
+++ b/products/toroloco.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div id="notify"></div>
     <header>
         <a href="../index.html"><img src="../images/logo.png" alt="logo" id="logo"></a>
         <!-- Menyknapp för att öppna mobilmenyn-->
