add max size on product img

--- a/index.html
+++ b/index.html
@@ -57,19 +57,19 @@
             <a href="products/calavera.html">
                 <picture>
                     <source srcset="images/calavera.webp" type="image/webp">
-                    <img src="images/calavera.jpg" alt="Calavera Monster Truck Toy">
+                    <img src="images/calavera.jpg" alt="Calavera Monster Truck Toy" max-height="555px" max-width="555px">
                 </picture>
             </a>
             <a href="products/toroloco.html">
                 <picture>
                     <source srcset="images/toroloco.webp" type="image/webp">
-                    <img src="images/toroloco.jpg" alt="Toro Loco Monster Truck Toy">
+                    <img src="images/toroloco.jpg" alt="Toro Loco Monster Truck Toy" max-height="555px" max-width="555px">
                 </picture>
             </a>
             <a href="products/gravedigger.html">
                 <picture>
                     <source srcset="images/gravedigger.webp" type="image/webp">
-                    <img src="images/gravedigger.jpg" alt="Grave Digger Monster Truck Toy">
+                    <img src="images/gravedigger.jpg" alt="Grave Digger Monster Truck Toy" max-height="555px" max-width="555px">
                 </picture>
             </a>
         </section>
