--- a/products/gravedigger.html
+++ b/products/gravedigger.html
@@ -50,7 +50,7 @@
             <div class="grid-item1">
                 <picture>
                     <source srcset="../images/gravedigger.webp" type="image/webp">
-                    <img src="../images/gravedigger.jpg" alt="Gravedigger Monster Truck Toy" class="product-page-img">
+                    <img src="../images/gravedigger.jpg" alt="Gravedigger Monster Truck Toy" class="product-page-img" max-height="555px" max-width="555px">
                 </picture>
             </div>
             <div class="grid-item2">
