--- a/products/sunnova.html
+++ b/products/sunnova.html
@@ -51,7 +51,7 @@
         <div class="grid-container">
             <div class="grid-item1">
                 <a href="../images/sunnova_big.jpg" target="_blank" data-lightbox="monstertruck"><img
-                        src="../images/sunnova.jpg" alt="Son-uva Digger Monster Truck Toy" class="product-page-img"></a>
+                        src="../images/sunnova.jpg" alt="Son-uva Digger Monster Truck Toy" class="product-page-img" max-height="555px" max-width="555px"></a>
                 <a href="../images/sunnova2_big.jpg" target="_blank" data-lightbox="monstertruck"><img
                         src="../images/sunnova2.jpg" alt="Son-uva Digger Monster Truck Toy" class="product-page-img"
                         id="hidden"></a>
