--- a/shop.html
+++ b/shop.html
@@ -56,31 +56,31 @@
             <a href="products/calavera.html">
                 <picture>
                     <source srcset="images/calavera.webp" type="image/webp">
-                    <img src="images/calavera.jpg" alt="Calavera Monster Truck Toy">
+                    <img src="images/calavera.jpg" alt="Calavera Monster Truck Toy" max-height="555px" max-width="555px">
                 </picture>
             </a>
             <a href="products/earthshaker.html">
                 <picture>
                     <source srcset="images/earthshaker.webp" type="image/webp">
-                    <img src="images/earthshaker.jpg" alt="Earthshaker Monster Truck Toy">
+                    <img src="images/earthshaker.jpg" alt="Earthshaker Monster Truck Toy" max-height="555px" max-width="555px">
                 </picture>
             </a>
             <a href="products/gravedigger.html">
                 <picture>
                     <source srcset="images/gravedigger.webp" type="image/webp">
-                    <img src="images/gravedigger.jpg" alt="Grave Digger Monster Truck Toy">
+                    <img src="images/gravedigger.jpg" alt="Grave Digger Monster Truck Toy" max-height="555px" max-width="555px">
                 </picture>
             </a>
             <a href="products/sunnova.html">
                 <picture>
                     <source srcset="images/sunnova.webp" type="image/webp">
-                    <img src="images/sunnova.jpg" alt="Son-uva Digger Monster Truck Toy">
+                    <img src="images/sunnova.jpg" alt="Son-uva Digger Monster Truck Toy" max-height="555px" max-width="555px">
                 </picture>
             </a>
             <a href="products/toroloco.html">
                 <picture>
                     <source srcset="images/toroloco.webp" type="image/webp">
-                    <img src="images/toroloco.jpg" alt="Toro Loco Monster Truck Toy">
+                    <img src="images/toroloco.jpg" alt="Toro Loco Monster Truck Toy" max-height="555px" max-width="555px">
                 </picture>
             </a>
         </section>
